Bug 914981: Inline Sqrt even if the input is a Float32; r=mjrosenb